# genut-py

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-docs.yaml
docs/: developer.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  user.html
docs/_sources/: developer.rst.txt  index.rst.txt
docs/source/: api.rst  conf.py  dev.rst  developer.rst  index.rst  user.rst
examples/: function.py  function_side_effect.py  method_side_effect.py  sample.py
examples/fib/: fib.py  test_fib_fib.py
examples/function/: function.py  test_function_compare.py
examples/function_side_effect/: test_function_side_effect_append_list.py
examples/method/: method.py  test_method_user_is_adult.py
examples/method_side_effect/: method_side_effect.py  test_method_side_effect_user_update_age.py
genut_py/: __init__.py  genut.py  main.py  state.py  trace.py
